--- a/public/style.css
+++ b/public/style.css
@@ -12,3 +12,14 @@ button {
 li {
   margin-bottom: 5px;
 } */
+
+/* This lets the bar transform into a 'X' when it is clicked. */
+#hamburger.active .bar:nth-of-type(1) {
+  transform: rotate(45deg) translateY(10px);
+}
+#hamburger.active .bar:nth-of-type(2) {
+  display: none;
+}
+#hamburger.active .bar:nth-of-type(3) {
+  transform: rotate(-45deg) translateX(-4px) translateY(-5px);
+}
